--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.30</version> <scope>provided</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
             <version>1.10.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.tilab.jade</groupId>
+            <artifactId>jade</artifactId>
+            <version>4.5.0</version>
+            <scope>system</scope>
+            <systemPath>C:/Users/mewam/Downloads/jade/lib/jade.jar</systemPath>
         </dependency>
     </dependencies>
 
